@@ -8,8 +8,8 @@ Feature: Headings
     Then I should see "h1's are cool"
     When I get the text for the "h2" element
     Then I should see "h2's are cool"
-#    When I get the text for the "h3" element
-#    Then I should see "h3's are cool"
+    When I get the text for the "h3" element
+    Then I should see "h3's are cool"
 #    When I get the text for the "h4" element
 #    Then I should see "h4's are cool"
 #    When I get the text for the "h5" element
@@ -32,6 +32,18 @@ Feature: Headings
   Scenario Outline: Locating h2s on the Page
     When I search for the heading2 by "<search_by>"
     Then I should see "h2's are cool"
+
+  Scenarios:
+    | search_by |
+    | id        |
+    | class     |
+    | name      |
+    | xpath     |
+    | index     |
+
+  Scenario Outline: Locating h3s on the Page
+    When I search for the heading3 by "<search_by>"
+    Then I should see "h3's are cool"
 
   Scenarios:
     | search_by |
