@@ -303,5 +303,20 @@ module PageObject
     def h2_element(identifier)
       platform.h2_for(identifier.clone)
     end
+
+    #
+    # Finds a h3
+    #
+    # @param [Hash] identifier how we find a H3.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class => Watir and Selenium
+    #   * :id => Watir and Selenium
+    #   * :index => Watir and Selenium
+    #   * :name => Watir and Selenium
+    #   * :xpath => Watir and Selenium
+    #
+    def h3_element(identifier)
+      platform.h3_for(identifier.clone)
+    end
   end
 end
