@@ -493,6 +493,25 @@ module PageObject
           Object::PageObject::Elements::Heading.new(element, :platform => :watir_webdriver)
         end  
 
+        #
+        # platform method to retrieve the text for a h3
+        # See PageObject::Accessors#h3
+        #
+        def h3_text_for(identifier)
+          identifier, frame_identifiers = parse_identifiers(identifier, Elements::Heading, 'h3')
+          @browser.instance_eval "#{nested_frames(frame_identifiers)}h3(identifier).text"          
+        end
+        
+        #
+        # platform method to retrieve the h3 element
+        # See PageObject::Accessors#h3
+        #
+        def h3_for(identifier)
+          identifier, frame_identifiers = parse_identifiers(identifier, Elements::Heading, 'h3')
+          element = @browser.instance_eval "#{nested_frames(frame_identifiers)}h3(identifier)"
+          Object::PageObject::Elements::Heading.new(element, :platform => :watir_webdriver)
+        end  
+
         private
     
         def parse_identifiers(identifier, element, tag_name=nil)
